--- a/allow-tor_ips_v4.conf
+++ b/allow-tor_ips_v4.conf
@@ -145,6 +145,7 @@ allow 109.70.100.70;
 allow 109.70.100.71;
 allow 113.20.31.38;
 allow 114.35.245.150;
+allow 118.163.74.160;
 allow 121.127.37.151;
 allow 121.78.28.166;
 allow 123.253.35.32;
@@ -881,6 +882,7 @@ allow 23.154.177.10;
 allow 23.154.177.11;
 allow 23.154.177.12;
 allow 23.154.177.13;
+allow 23.154.177.14;
 allow 23.154.177.15;
 allow 23.154.177.16;
 allow 23.154.177.17;
@@ -949,6 +951,7 @@ allow 45.12.3.80;
 allow 45.128.133.242;
 allow 45.132.246.245;
 allow 45.134.225.36;
+allow 45.137.99.14;
 allow 45.138.16.107;
 allow 45.138.16.113;
 allow 45.138.16.178;
@@ -984,6 +987,7 @@ allow 45.141.215.90;
 allow 45.141.215.95;
 allow 45.141.215.97;
 allow 45.148.10.111;
+allow 45.148.10.169;
 allow 45.61.185.172;
 allow 45.61.186.203;
 allow 45.61.187.200;
@@ -1115,6 +1119,7 @@ allow 80.67.167.81;
 allow 80.67.172.162;
 allow 80.82.78.14;
 allow 80.94.92.84;
+allow 80.94.92.92;
 allow 81.16.33.42;
 allow 81.17.28.95;
 allow 81.181.104.22;
