--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -145,6 +145,7 @@ deny 109.70.100.70;
 deny 109.70.100.71;
 deny 113.20.31.38;
 deny 114.35.245.150;
+deny 118.163.74.160;
 deny 121.127.37.151;
 deny 121.78.28.166;
 deny 123.253.35.32;
@@ -835,6 +836,7 @@ deny 2001:67c:e28:1::4;
 deny 2001:910:1400:107::2;
 deny 2001:ac8:22:43::20e5:a7d7;
 deny 2001:b011:4006:3514::b;
+deny 2001:b030:2422::7234;
 deny 2001:bc8:1640:317d:dc00:ff:fe39:7bb3;
 deny 2001:bf0:666::666;
 deny 2001:df7:7400:c10d:216:3eff:fecd:511a;
@@ -993,6 +995,7 @@ deny 23.154.177.10;
 deny 23.154.177.11;
 deny 23.154.177.12;
 deny 23.154.177.13;
+deny 23.154.177.14;
 deny 23.154.177.15;
 deny 23.154.177.16;
 deny 23.154.177.17;
@@ -1592,6 +1595,7 @@ deny 2a0c:5700:3133:4000:be24:11ff:fe51:a829;
 deny 2a0c:5700:3133:650:b0ea:eeff:fedb:1f7b;
 deny 2a0c:5cc0:1:1::293c:1518;
 deny 2a0c:e300::23;
+deny 2a0d:8140:1fff:4a9a::1;
 deny 2a0d:bbc7:0:1::10a;
 deny 2a0d:bbc7:0:1::1df;
 deny 2a0d:bbc7:0:1::254;
@@ -1727,6 +1731,7 @@ deny 45.12.3.80;
 deny 45.128.133.242;
 deny 45.132.246.245;
 deny 45.134.225.36;
+deny 45.137.99.14;
 deny 45.138.16.107;
 deny 45.138.16.113;
 deny 45.138.16.178;
@@ -1762,6 +1767,7 @@ deny 45.141.215.90;
 deny 45.141.215.95;
 deny 45.141.215.97;
 deny 45.148.10.111;
+deny 45.148.10.169;
 deny 45.61.185.172;
 deny 45.61.186.203;
 deny 45.61.187.200;
@@ -1893,6 +1899,7 @@ deny 80.67.167.81;
 deny 80.67.172.162;
 deny 80.82.78.14;
 deny 80.94.92.84;
+deny 80.94.92.92;
 deny 81.16.33.42;
 deny 81.17.28.95;
 deny 81.181.104.22;
