--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -77,7 +77,6 @@ set_real_ip_from 107.189.13.180;
 set_real_ip_from 107.189.13.212;
 set_real_ip_from 107.189.13.251;
 set_real_ip_from 107.189.13.253;
-set_real_ip_from 107.189.13.254;
 set_real_ip_from 107.189.13.91;
 set_real_ip_from 107.189.14.106;
 set_real_ip_from 107.189.14.214;
@@ -1282,6 +1281,7 @@ set_real_ip_from 2a01:7e00::f03c:91ff:fe56:2656;
 set_real_ip_from 2a01:7e00::f03c:91ff:fe78:b382;
 set_real_ip_from 2a01:7e01::f03c:95ff:fe64:90e3;
 set_real_ip_from 2a02:16d0:0:5::1;
+set_real_ip_from 2a02:2970:1001::4b;
 set_real_ip_from 2a02:2b88:2:6ce::1;
 set_real_ip_from 2a02:418:6017::147;
 set_real_ip_from 2a02:418:6017::148;
@@ -1347,7 +1347,6 @@ set_real_ip_from 2a04:52c0:104:ad97::1;
 set_real_ip_from 2a04:52c0:105:78fc::1;
 set_real_ip_from 2a04:52c0:105:82c0::1;
 set_real_ip_from 2a04:52c0:105:98a3::1;
-set_real_ip_from 2a04:52c0:105:d7eb::1;
 set_real_ip_from 2a04:52c0:106:394::1;
 set_real_ip_from 2a04:52c0:106:d219::1;
 set_real_ip_from 2a04:52c0:108:a34f::1;
@@ -1814,6 +1813,7 @@ set_real_ip_from 45.95.169.230;
 set_real_ip_from 45.95.169.24;
 set_real_ip_from 45.95.169.255;
 set_real_ip_from 46.165.243.36;
+set_real_ip_from 46.182.21.248;
 set_real_ip_from 46.195.184.193;
 set_real_ip_from 46.23.109.25;
 set_real_ip_from 46.232.251.191;
@@ -1839,7 +1839,6 @@ set_real_ip_from 5.230.174.6;
 set_real_ip_from 5.255.100.219;
 set_real_ip_from 5.255.100.224;
 set_real_ip_from 5.255.100.227;
-set_real_ip_from 5.255.100.26;
 set_real_ip_from 5.255.101.10;
 set_real_ip_from 5.255.101.131;
 set_real_ip_from 5.255.103.235;
