--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -143,7 +143,6 @@ allow 109.70.100.69;
 allow 109.70.100.70;
 allow 109.70.100.71;
 allow 113.20.31.38;
-allow 114.158.248.4;
 allow 114.35.245.150;
 allow 118.163.74.160;
 allow 121.78.28.166;
@@ -198,7 +197,6 @@ allow 161.97.71.11;
 allow 162.210.173.17;
 allow 162.216.18.62;
 allow 162.247.72.192;
-allow 162.247.72.199;
 allow 162.247.74.200;
 allow 162.247.74.201;
 allow 162.247.74.202;
@@ -248,11 +246,6 @@ allow 176.118.193.33;
 allow 176.121.81.51;
 allow 176.58.100.98;
 allow 176.58.121.177;
-allow 176.65.137.113;
-allow 176.65.137.142;
-allow 176.65.137.39;
-allow 176.65.137.42;
-allow 176.65.137.51;
 allow 176.65.138.250;
 allow 176.65.143.138;
 allow 176.65.144.142;
@@ -310,6 +303,7 @@ allow 185.113.128.30;
 allow 185.117.215.9;
 allow 185.120.16.171;
 allow 185.120.16.176;
+allow 185.126.115.146;
 allow 185.129.61.1;
 allow 185.129.61.10;
 allow 185.129.61.129;
@@ -586,7 +580,6 @@ allow 185.56.83.83;
 allow 185.67.82.114;
 allow 185.7.33.146;
 allow 185.82.219.109;
-allow 185.84.31.254;
 allow 188.165.200.97;
 allow 188.214.104.21;
 allow 188.239.191.25;
@@ -1076,7 +1069,6 @@ allow 2602:fc24:19:30::1;
 allow 2602:fc24:19:524::1;
 allow 2602:fc24:19:eb06::dead;
 allow 2602:fccf:310:1::c;
-allow 2602:fef9:100:1100::199;
 allow 2604:2dc0:101:200::53c8;
 allow 2604:2dc0:202:300::ed3;
 allow 2604:6600:0:42::2;
@@ -1326,7 +1318,6 @@ allow 2a03:4000:66:15:18a0:6bff:fe90:3147;
 allow 2a03:4000:6:d042:5440:88ff:fedd:4ae5;
 allow 2a03:4000:6:e047:6494:62ff:fe3f:85b8;
 allow 2a03:4000:7:dcc:14ac:f2ff:fea9:e4c7;
-allow 2a03:6f20:531::254;
 allow 2a03:e600:100::1;
 allow 2a03:e600:100::2;
 allow 2a03:e600:100::3;
@@ -1348,8 +1339,8 @@ allow 2a04:52c0:104:31e6::1;
 allow 2a04:52c0:104:4735::1;
 allow 2a04:52c0:104:ad97::1;
 allow 2a04:52c0:105:78fc::1;
-allow 2a04:52c0:105:82c0::1;
 allow 2a04:52c0:105:98a3::1;
+allow 2a04:52c0:105:d7eb::1;
 allow 2a04:52c0:106:394::1;
 allow 2a04:52c0:106:d219::1;
 allow 2a04:52c0:108:a34f::1;
@@ -1595,8 +1586,8 @@ allow 2a0c:5700:3133:4000:be24:11ff:fe07:68d;
 allow 2a0c:5700:3133:4000:be24:11ff:fe3c:6727;
 allow 2a0c:5700:3133:4000:be24:11ff:fe51:a829;
 allow 2a0c:5700:3133:650:b0ea:eeff:fedb:1f7b;
-allow 2a0c:5cc0:1:1::293c:1518;
 allow 2a0c:e300::23;
+allow 2a0d:8140:1fff:4a9a::1;
 allow 2a0d:bbc7:0:1::10a;
 allow 2a0d:bbc7:0:1::1df;
 allow 2a0d:bbc7:0:1::254;
@@ -1732,6 +1723,7 @@ allow 45.12.3.80;
 allow 45.128.133.242;
 allow 45.132.246.245;
 allow 45.134.225.36;
+allow 45.137.99.14;
 allow 45.138.16.107;
 allow 45.138.16.113;
 allow 45.138.16.178;
@@ -1836,8 +1828,8 @@ allow 51.91.18.151;
 allow 5.196.95.34;
 allow 5.230.174.6;
 allow 5.255.100.219;
-allow 5.255.100.224;
 allow 5.255.100.227;
+allow 5.255.100.26;
 allow 5.255.101.10;
 allow 5.255.101.131;
 allow 5.255.103.235;
@@ -1915,7 +1907,6 @@ allow 84.16.224.227;
 allow 84.211.226.13;
 allow 84.239.46.144;
 allow 84.247.183.128;
-allow 85.239.41.130;
 allow 85.93.218.204;
 allow 86.54.28.49;
 allow 87.118.110.27;
@@ -1930,7 +1921,6 @@ allow 88.80.20.86;
 allow 88.80.26.2;
 allow 88.80.26.3;
 allow 88.80.26.4;
-allow 89.147.108.63;
 allow 89.147.108.90;
 allow 89.147.110.118;
 allow 89.147.110.154;
