--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -119,7 +119,6 @@ allow 107.189.8.56;
 allow 107.189.8.65;
 allow 107.189.8.70;
 allow 108.181.27.205;
-allow 108.181.69.243;
 allow 108.59.12.3;
 allow 108.61.189.136;
 allow 109.104.153.22;
@@ -143,7 +142,7 @@ allow 109.70.100.69;
 allow 109.70.100.70;
 allow 109.70.100.71;
 allow 113.20.31.38;
-allow 114.158.248.4;
+allow 114.158.240.68;
 allow 114.35.245.150;
 allow 118.163.74.160;
 allow 121.78.28.166;
@@ -183,6 +182,7 @@ allow 152.53.133.14;
 allow 152.53.53.243;
 allow 154.16.116.61;
 allow 154.26.159.157;
+allow 154.41.95.1;
 allow 156.229.232.101;
 allow 156.229.232.104;
 allow 156.229.232.108;
@@ -240,7 +240,6 @@ allow 172.81.131.139;
 allow 172.81.131.156;
 allow 172.81.132.94;
 allow 173.0.3.111;
-allow 173.212.239.46;
 allow 173.237.206.68;
 allow 173.249.57.253;
 allow 173.255.198.243;
@@ -725,6 +724,7 @@ allow 198.98.57.151;
 allow 198.98.57.74;
 allow 198.98.60.90;
 allow 198.98.61.60;
+allow 198.98.62.158;
 allow 199.189.27.123;
 allow 199.195.249.214;
 allow 199.195.251.119;
@@ -1355,6 +1355,7 @@ allow 2a04:52c0:119:3f0b::1;
 allow 2a04:52c0:123:c6c3::1;
 allow 2a04:52c0:126:3ab8::1;
 allow 2a04:52c0:128:c6e7:50ef:cafe:babe:1337;
+allow 2a04:52c0:130:7025::1;
 allow 2a04:52c0:130:896e::1;
 allow 2a04:9dc0:31::c0cc:4d;
 allow 2a05:541:110:20::1;
@@ -1593,7 +1594,6 @@ allow 2a0c:5700:3133:4000:be24:11ff:fe51:a829;
 allow 2a0c:5700:3133:650:b0ea:eeff:fedb:1f7b;
 allow 2a0c:5cc0:1:1::293c:1518;
 allow 2a0c:e300::23;
-allow 2a0d:8140:1fff:4a9a::1;
 allow 2a0d:bbc7:0:1::10a;
 allow 2a0d:bbc7:0:1::1df;
 allow 2a0d:bbc7:0:1::254;
@@ -1729,7 +1729,6 @@ allow 45.12.3.80;
 allow 45.128.133.242;
 allow 45.132.246.245;
 allow 45.134.225.36;
-allow 45.137.99.14;
 allow 45.138.16.107;
 allow 45.138.16.113;
 allow 45.138.16.178;
@@ -1849,6 +1848,7 @@ allow 5.255.121.71;
 allow 5.255.123.158;
 allow 5.255.123.164;
 allow 5.255.125.196;
+allow 5.255.125.252;
 allow 5.255.127.222;
 allow 5.255.97.221;
 allow 5.255.98.151;
