--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -119,7 +119,6 @@ set_real_ip_from 107.189.8.56;
 set_real_ip_from 107.189.8.65;
 set_real_ip_from 107.189.8.70;
 set_real_ip_from 108.181.27.205;
-set_real_ip_from 108.181.69.243;
 set_real_ip_from 108.59.12.3;
 set_real_ip_from 108.61.189.136;
 set_real_ip_from 109.104.153.22;
@@ -143,7 +142,7 @@ set_real_ip_from 109.70.100.69;
 set_real_ip_from 109.70.100.70;
 set_real_ip_from 109.70.100.71;
 set_real_ip_from 113.20.31.38;
-set_real_ip_from 114.158.248.4;
+set_real_ip_from 114.158.240.68;
 set_real_ip_from 114.35.245.150;
 set_real_ip_from 118.163.74.160;
 set_real_ip_from 121.78.28.166;
@@ -183,6 +182,7 @@ set_real_ip_from 152.53.133.14;
 set_real_ip_from 152.53.53.243;
 set_real_ip_from 154.16.116.61;
 set_real_ip_from 154.26.159.157;
+set_real_ip_from 154.41.95.1;
 set_real_ip_from 156.229.232.101;
 set_real_ip_from 156.229.232.104;
 set_real_ip_from 156.229.232.108;
@@ -240,7 +240,6 @@ set_real_ip_from 172.81.131.139;
 set_real_ip_from 172.81.131.156;
 set_real_ip_from 172.81.132.94;
 set_real_ip_from 173.0.3.111;
-set_real_ip_from 173.212.239.46;
 set_real_ip_from 173.237.206.68;
 set_real_ip_from 173.249.57.253;
 set_real_ip_from 173.255.198.243;
@@ -725,6 +724,7 @@ set_real_ip_from 198.98.57.151;
 set_real_ip_from 198.98.57.74;
 set_real_ip_from 198.98.60.90;
 set_real_ip_from 198.98.61.60;
+set_real_ip_from 198.98.62.158;
 set_real_ip_from 199.189.27.123;
 set_real_ip_from 199.195.249.214;
 set_real_ip_from 199.195.251.119;
@@ -1355,6 +1355,7 @@ set_real_ip_from 2a04:52c0:119:3f0b::1;
 set_real_ip_from 2a04:52c0:123:c6c3::1;
 set_real_ip_from 2a04:52c0:126:3ab8::1;
 set_real_ip_from 2a04:52c0:128:c6e7:50ef:cafe:babe:1337;
+set_real_ip_from 2a04:52c0:130:7025::1;
 set_real_ip_from 2a04:52c0:130:896e::1;
 set_real_ip_from 2a04:9dc0:31::c0cc:4d;
 set_real_ip_from 2a05:541:110:20::1;
@@ -1593,7 +1594,6 @@ set_real_ip_from 2a0c:5700:3133:4000:be24:11ff:fe51:a829;
 set_real_ip_from 2a0c:5700:3133:650:b0ea:eeff:fedb:1f7b;
 set_real_ip_from 2a0c:5cc0:1:1::293c:1518;
 set_real_ip_from 2a0c:e300::23;
-set_real_ip_from 2a0d:8140:1fff:4a9a::1;
 set_real_ip_from 2a0d:bbc7:0:1::10a;
 set_real_ip_from 2a0d:bbc7:0:1::1df;
 set_real_ip_from 2a0d:bbc7:0:1::254;
@@ -1729,7 +1729,6 @@ set_real_ip_from 45.12.3.80;
 set_real_ip_from 45.128.133.242;
 set_real_ip_from 45.132.246.245;
 set_real_ip_from 45.134.225.36;
-set_real_ip_from 45.137.99.14;
 set_real_ip_from 45.138.16.107;
 set_real_ip_from 45.138.16.113;
 set_real_ip_from 45.138.16.178;
@@ -1849,6 +1848,7 @@ set_real_ip_from 5.255.121.71;
 set_real_ip_from 5.255.123.158;
 set_real_ip_from 5.255.123.164;
 set_real_ip_from 5.255.125.196;
+set_real_ip_from 5.255.125.252;
 set_real_ip_from 5.255.127.222;
 set_real_ip_from 5.255.97.221;
 set_real_ip_from 5.255.98.151;
