--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -191,6 +191,7 @@ allow 156.229.232.54;
 allow 156.229.232.98;
 allow 156.229.233.92;
 allow 158.220.123.219;
+allow 158.220.86.12;
 allow 158.69.252.116;
 allow 159.89.124.116;
 allow 160.119.249.240;
@@ -999,7 +1000,6 @@ allow 23.154.177.10;
 allow 23.154.177.11;
 allow 23.154.177.12;
 allow 23.154.177.13;
-allow 23.154.177.14;
 allow 23.154.177.15;
 allow 23.154.177.16;
 allow 23.154.177.17;
@@ -1594,6 +1594,7 @@ allow 2a0c:5700:3133:4000:be24:11ff:fe51:a829;
 allow 2a0c:5700:3133:650:b0ea:eeff:fedb:1f7b;
 allow 2a0c:5cc0:1:1::293c:1518;
 allow 2a0c:e300::23;
+allow 2a0d:8140:1fff:4a9a::1;
 allow 2a0d:bbc7:0:1::10a;
 allow 2a0d:bbc7:0:1::1df;
 allow 2a0d:bbc7:0:1::254;
@@ -1729,6 +1730,7 @@ allow 45.12.3.80;
 allow 45.128.133.242;
 allow 45.132.246.245;
 allow 45.134.225.36;
+allow 45.137.99.14;
 allow 45.138.16.107;
 allow 45.138.16.113;
 allow 45.138.16.178;
@@ -1901,7 +1903,6 @@ allow 81.17.28.95;
 allow 81.181.104.22;
 allow 8.208.26.177;
 allow 8.209.106.19;
-allow 82.118.248.205;
 allow 82.197.182.161;
 allow 82.221.128.191;
 allow 82.221.131.5;
