--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -191,6 +191,7 @@ deny 156.229.232.54;
 deny 156.229.232.98;
 deny 156.229.233.92;
 deny 158.220.123.219;
+deny 158.220.86.12;
 deny 158.69.252.116;
 deny 159.89.124.116;
 deny 160.119.249.240;
@@ -999,7 +1000,6 @@ deny 23.154.177.10;
 deny 23.154.177.11;
 deny 23.154.177.12;
 deny 23.154.177.13;
-deny 23.154.177.14;
 deny 23.154.177.15;
 deny 23.154.177.16;
 deny 23.154.177.17;
@@ -1594,6 +1594,7 @@ deny 2a0c:5700:3133:4000:be24:11ff:fe51:a829;
 deny 2a0c:5700:3133:650:b0ea:eeff:fedb:1f7b;
 deny 2a0c:5cc0:1:1::293c:1518;
 deny 2a0c:e300::23;
+deny 2a0d:8140:1fff:4a9a::1;
 deny 2a0d:bbc7:0:1::10a;
 deny 2a0d:bbc7:0:1::1df;
 deny 2a0d:bbc7:0:1::254;
@@ -1729,6 +1730,7 @@ deny 45.12.3.80;
 deny 45.128.133.242;
 deny 45.132.246.245;
 deny 45.134.225.36;
+deny 45.137.99.14;
 deny 45.138.16.107;
 deny 45.138.16.113;
 deny 45.138.16.178;
@@ -1901,7 +1903,6 @@ deny 81.17.28.95;
 deny 81.181.104.22;
 deny 8.208.26.177;
 deny 8.209.106.19;
-deny 82.118.248.205;
 deny 82.197.182.161;
 deny 82.221.128.191;
 deny 82.221.131.5;
