--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -191,6 +191,7 @@ set_real_ip_from 156.229.232.54;
 set_real_ip_from 156.229.232.98;
 set_real_ip_from 156.229.233.92;
 set_real_ip_from 158.220.123.219;
+set_real_ip_from 158.220.86.12;
 set_real_ip_from 158.69.252.116;
 set_real_ip_from 159.89.124.116;
 set_real_ip_from 160.119.249.240;
@@ -999,7 +1000,6 @@ set_real_ip_from 23.154.177.10;
 set_real_ip_from 23.154.177.11;
 set_real_ip_from 23.154.177.12;
 set_real_ip_from 23.154.177.13;
-set_real_ip_from 23.154.177.14;
 set_real_ip_from 23.154.177.15;
 set_real_ip_from 23.154.177.16;
 set_real_ip_from 23.154.177.17;
@@ -1594,6 +1594,7 @@ set_real_ip_from 2a0c:5700:3133:4000:be24:11ff:fe51:a829;
 set_real_ip_from 2a0c:5700:3133:650:b0ea:eeff:fedb:1f7b;
 set_real_ip_from 2a0c:5cc0:1:1::293c:1518;
 set_real_ip_from 2a0c:e300::23;
+set_real_ip_from 2a0d:8140:1fff:4a9a::1;
 set_real_ip_from 2a0d:bbc7:0:1::10a;
 set_real_ip_from 2a0d:bbc7:0:1::1df;
 set_real_ip_from 2a0d:bbc7:0:1::254;
@@ -1729,6 +1730,7 @@ set_real_ip_from 45.12.3.80;
 set_real_ip_from 45.128.133.242;
 set_real_ip_from 45.132.246.245;
 set_real_ip_from 45.134.225.36;
+set_real_ip_from 45.137.99.14;
 set_real_ip_from 45.138.16.107;
 set_real_ip_from 45.138.16.113;
 set_real_ip_from 45.138.16.178;
@@ -1901,7 +1903,6 @@ set_real_ip_from 81.17.28.95;
 set_real_ip_from 81.181.104.22;
 set_real_ip_from 8.208.26.177;
 set_real_ip_from 8.209.106.19;
-set_real_ip_from 82.118.248.205;
 set_real_ip_from 82.197.182.161;
 set_real_ip_from 82.221.128.191;
 set_real_ip_from 82.221.131.5;
